# qtext

./: Makefile  README.md  pyproject.toml  test.py  test_cohere_wiki.py  test_sparse.py  tui.py
.github/workflows/: check.yml  release.yml
docker/: Dockerfile  README.md  compose.yaml  config.json
docker/encoder/: Dockerfile  main.py  requirements.txt
docker/highlight/: Dockerfile  main.py  requirements.txt
docker/sparse/: Dockerfile  main.py
qtext/: client.py  config.py  emb_client.py  engine.py  highlight_client.py  log.py  main.py  metrics.py  pg_client.py  ranker.py  schema.py  server.py  spec.py  utils.py
tui/: tui.tcss
